# pylanetary

./: .gitattributes  .gitignore  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-update.md  documentation_change
.github/workflows/: ci.yml  ci_tests.yml
docs/: citing.rst  conf.py  contributing.rst  description.rst  index.rst  installation.rst  nav-examples.ipynb  nav-tutorial.ipynb  navigation_api.rst  requirements.txt  rings-tutorial.ipynb  rings_api.rst  usage.rst  utils-tutorial.ipynb  utils_api.rst  wvals.npy
docs/_build/doctrees/: citing.doctree  contributing.doctree  description.doctree  environment.pickle  index.doctree  installation.doctree  nav-examples.doctree  nav-tutorial.doctree  navigation_api.doctree  rings-tutorial.doctree  rings_api.doctree  usage.doctree  utils-tutorial.doctree  utils_api.doctree
docs/_build/doctrees/api/: index.doctree  navigation_api.doctree  rings_api.doctree  utils_api.doctree
docs/_build/doctrees/nbsphinx/: nav-examples.ipynb  nav-tutorial.ipynb
docs/_build/doctrees/nbsphinx/tutorials/: nav-examples.ipynb  rings-tutorial.ipynb  unit-conversions.ipynb
docs/_build/doctrees/tutorials/: body-tutorial.doctree  index.doctree  nav-examples.doctree  nav-tutorial.doctree  rings-tutorial.doctree  unit-conversions.doctree  utils-tutorial.doctree
docs/_build/html/: .buildinfo  citing.html  contributing.html  description.html  genindex.html  index.html  installation.html  nav-examples.html  nav-examples.ipynb  nav-tutorial.html  navigation_api.html  objects.inv  py-modindex.html  rings-tutorial.html  rings_api.html  search.html  searchindex.js  usage.html  utils-tutorial.html  utils_api.html
docs/_build/html/_sources/: citing.rst.txt  contributing.rst.txt  description.rst.txt  index.rst.txt  installation.rst.txt  rings-tutorial.ipynb.txt  utils-tutorial.ipynb.txt
docs/_build/html/_sources/tutorials/: body-tutorial.ipynb.txt
docs/_build/html/api/: index.html  navigation_api.html  rings_api.html  utils_api.html
docs/_build/html/tutorials/: body-tutorial.html  index.html  nav-examples.html  nav-tutorial.html  rings-tutorial.html  unit-conversions.html  utils-tutorial.html
docs/api/: index.rst
docs/pylanetary/: index.rst
docs/tutorials/: index.rst  nav-tutorial.ipynb
licenses/: LICENSE.rst
notebooks/: ellipse-projection-play.ipynb  nav-tutorial.ipynb  planetnav-tutorial.ipynb  ring-system-modeling-tutorial.ipynb  utils-tutorial.ipynb
planetary_toolkit/: conftest.py
pylanetary/: __init__.py  conftest.py
pylanetary/example_subpkg/: setup_package.py
pylanetary/navigation/: core.py
pylanetary/navigation/tests/: test_nav.py  test_nav_remote.py
pylanetary/navigation/tests/data/: ephem.hdf5  lat_g.npy  lon_w.npy  mu.npy  nepk99_IF.fits  projected.npy  projected_custom.npy  projected_polar.npy  surf_n.npy
pylanetary/planet_nav/: planet_nav.py
pylanetary/planetnav/: __init__.py  core.py
pylanetary/planetnav/tests/: test_planetnav.py
pylanetary/planetnav/tests/data/: ephem.hdf5  mu.npy  surf_n.npy
pylanetary/rings/: __init__.py  core.py  ellipse-projection-play.ipynb  ring-system-modeling-tutorial.ipynb  ringnode_query_tester_delete_later.py
pylanetary/rings/data/: Jupiter_refs.txt  Jupiter_ring_data.hdf5  Neptune_refs.txt  Neptune_ring_data.hdf5  Saturn_refs.txt  Saturn_ring_data.hdf5  Uranus_refs.txt  Uranus_ring_data.hdf5  build_ring_tables.py
pylanetary/rings/tests/: test_ellipse_math.py  test_ringmodel.py  test_ringmodel_remote.py  test_vector_math.py
pylanetary/rings/tests/data/: as_2d_array_testarr.npy  ura_system_testarr.npy
pylanetary/spectral/: core.py
pylanetary/utils/: core.py
pylanetary/utils/data/: Io.yaml  Jupiter.yaml  Neptune.yaml  Saturn.yaml  Uranus.yaml
pylanetary/utils/tests/: test_utils.py  test_utils_remote.py
pylanetary/utils/tests/data/: nepk99_IF_airy.npy  nepk99_IF_custom.npy  nepk99_IF_deconvolved.npy  nepk99_IF_gauss.npy
