[metadata]
name = planetary_toolkit
author = Ned Molter & Chris Moeckel
author_email = emolter@berkeley.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/emolter/planetary_toolkit
description = data processing and modeling tools for ring, moon, and planet observations
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = emolter/planetary_toolkit

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
planetary_toolkit = data/*

[tool:pytest]
testpaths = "planetary_toolkit" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    planetary_toolkit/_astropy_init*
    planetary_toolkit/conftest.py
    planetary_toolkit/*setup_package*
    planetary_toolkit/tests/*
    planetary_toolkit/*/tests/*
    planetary_toolkit/extern/*
    planetary_toolkit/version*
    */planetary_toolkit/_astropy_init*
    */planetary_toolkit/conftest.py
    */planetary_toolkit/*setup_package*
    */planetary_toolkit/tests/*
    */planetary_toolkit/*/tests/*
    */planetary_toolkit/extern/*
    */planetary_toolkit/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
