[metadata]
name = pylanetary
author = Ned Molter & Chris Moeckel
author_email = emolter@berkeley.edu
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/emolter/pylanetary
description = data processing and modeling tools for ring, moon, and planet observations
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = emolter/pylanetary

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
	astropy>=4.3.0
	astroquery @ git+https://github.com/astropy/astroquery.git
	beautifulsoup4>=4.11.1
	extension_helpers>=1.0.0
	h5py>=3.0.0
	image_registration @ git+https://github.com/keflavich/image_registration.git
	matplotlib>=3.4.3
	numpy>=1.23.4
	photutils>=1.4.0
	pytest>=6.2.4
	pytest_astropy_header>=0.2.2
	scikit-image>=0.18.3
	scipy>=1.9.1
	setuptools>=57.0.0
	setuptools_scm>=7.0.5
	sphinx_astropy>=1.7.0

[options.entry_points]
console_scripts =
    astropy-package-template-example = packagename.example_mod:main

[options.extras_require]
test =
    pytest-astropy
docs =
    sphinx-astropy

[options.package_data]
pylanetary = data/*
* = *.txt, *.npy, *.hdf5, *.yaml

[tool:pytest]
testpaths = "pylanetary" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
    pylanetary/_astropy_init*
    pylanetary/conftest.py
    pylanetary/*setup_package*
    pylanetary/tests/*
    pylanetary/*/tests/*
    pylanetary/extern/*
    pylanetary/version*
    */pylanetary/_astropy_init*
    */pylanetary/conftest.py
    */pylanetary/*setup_package*
    */pylanetary/tests/*
    */pylanetary/*/tests/*
    */pylanetary/extern/*
    */pylanetary/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
